--- a/argocd/app-of-apps.yaml
+++ b/argocd/app-of-apps.yaml
@@ -9,7 +9,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/hansohn/flink-playground.git
-    targetRevision: HEAD
+    targetRevision: argocd
     path: argocd/apps
   destination:
     server: https://kubernetes.default.svc
