--- a/argocd/apps/flink-autoscale.yaml
+++ b/argocd/apps/flink-autoscale.yaml
@@ -11,7 +11,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/hansohn/flink-playground.git
-    targetRevision: HEAD
+    targetRevision: argocd
     path: charts/flink-autoscale
   destination:
     server: https://kubernetes.default.svc
