--- a/argocd/apps/prometheus.yaml
+++ b/argocd/apps/prometheus.yaml
@@ -9,7 +9,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/hansohn/flink-playground.git
-    targetRevision: HEAD
+    targetRevision: argocd
     path: charts/prometheus
   destination:
     server: https://kubernetes.default.svc
