--- a/charts/flink-autoscale/values.yaml
+++ b/charts/flink-autoscale/values.yaml
@@ -129,6 +129,9 @@ jobs:
       state.checkpoints.dir: file:///tmp/flink-checkpoints
       state.savepoints.dir: file:///tmp/flink-savepoints
       execution.checkpointing.interval: "30s"
+      # Prometheus metrics reporter
+      metrics.reporter.prom.class: org.apache.flink.metrics.prometheus.PrometheusReporter
+      metrics.reporter.prom.port: "9249"
 
   # Example 2: Analytics Pipeline (disabled by default)
   # Uncomment to enable
