--- a/charts/flink-autoscale/values.yaml
+++ b/charts/flink-autoscale/values.yaml
@@ -130,7 +130,7 @@ jobs:
       state.savepoints.dir: file:///tmp/flink-savepoints
       execution.checkpointing.interval: "30s"
       # Prometheus metrics reporter
-      metrics.reporter.prom.class: org.apache.flink.metrics.prometheus.PrometheusReporter
+      metrics.reporter.prom.factory.class: org.apache.flink.metrics.prometheus.PrometheusReporterFactory
       metrics.reporter.prom.port: "9249"
 
   # Example 2: Analytics Pipeline (disabled by default)
