fix(flink): use stateless upgrade mode for playground
Changed upgradeMode from 'savepoint' to 'stateless' to prevent
failures when savepoints are stored in ephemeral /tmp directories.
Since this is a playground environment, savepoint-based upgrades
are not needed and were causing pod crashes when trying to restore
from non-existent savepoint files after pod restarts.

--- a/charts/flink-autoscale/values.yaml
+++ b/charts/flink-autoscale/values.yaml
@@ -81,7 +81,7 @@ jobs:
       jarURI: "local:///opt/flink/usrlib/autoscaling-load-job.jar"
       entryClass: "com.example.flink.AutoscalingLoadJob"
       parallelism: 2
-      upgradeMode: savepoint
+      upgradeMode: stateless
       state: running
       args: []
 
