--- a/charts/prometheus/templates/prometheus-config.yaml
+++ b/charts/prometheus/templates/prometheus-config.yaml
@@ -34,6 +34,7 @@ data:
         scheme: https
         tls_config:
           ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+          insecure_skip_verify: true
         bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
         relabel_configs:
           - action: labelmap
