--- a/charts/prometheus/templates/rbac.yaml
+++ b/charts/prometheus/templates/rbac.yaml
@@ -33,7 +33,7 @@ metadata:
     app.kubernetes.io/component: prometheus
 rules:
   - apiGroups: [""]
-    resources: ["nodes", "nodes/proxy", "services", "endpoints", "pods"]
+    resources: ["nodes", "nodes/proxy", "nodes/metrics", "services", "endpoints", "pods"]
     verbs: ["get", "list", "watch"]
   - apiGroups: [""]
     resources: ["configmaps"]
