fix(flink-autoscale): handle missing job.persistence in PVC template
Fix nil pointer error when rendering PVC template by properly checking
if job.persistence exists before accessing .size field.

Error: nil pointer evaluating interface {}.size

Fixed with conditional check using hasKey to safely access nested fields.

--- a/charts/flink-autoscale/templates/pvc.yaml
+++ b/charts/flink-autoscale/templates/pvc.yaml
@@ -17,6 +17,6 @@ spec:
   {{- end }}
   resources:
     requests:
-      storage: {{ default $.Values.defaults.persistence.size $job.persistence.size | default $.Values.defaults.persistence.size }}
+      storage: {{ if and $job.persistence (hasKey $job.persistence "size") }}{{ $job.persistence.size }}{{ else }}{{ $.Values.defaults.persistence.size }}{{ end }}
 {{- end }}
 {{- end }}
